--- a/.github/workflows/cpp-tests.yml
+++ b/.github/workflows/cpp-tests.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Report C++ coverage to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
-          file: coverage.info
+          file: reactor-cpp.info
           fail_ci_if_error: false
           verbose: true
         if: matrix.platform == 'ubuntu-latest'
