--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -58,9 +58,14 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run Python tests
         run: |
+          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
+        if: ${{ runner.os != 'macOS' }}
+      - name: Run Python tests macOS
+        run: |
           python3 -m venv env
           source env/bin/activate
           ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
+        if: ${{ runner.os == 'macOS' }}
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
