--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -29,6 +29,9 @@ jobs:
           fetch-depth: 0
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        if: ${{ runner.os == 'Windows' }}
       - name: Install dependencies OS X
         run: |
           brew install coreutils
