--- a/.github/workflows/extract-ref.yml
+++ b/.github/workflows/extract-ref.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Extract ref from ${{ inputs.file }}
         id: read
-        run: echo "::set-output name=ref::$(head -n 1 ${{ inputs.file }})"
+        run: echo "ref=$(head -n 1 ${{ inputs.file }})" >> $GITHUB_OUTPUT
