Adapt workflow to use specified runtime

--- a/.github/workflows/ts-tests.yml
+++ b/.github/workflows/ts-tests.yml
@@ -48,9 +48,14 @@ jobs:
           path: org.lflang/src/lib/ts/reactor-ts
           ref: ${{ inputs.runtime-ref }}
         if: ${{ inputs.runtime-ref }}
-      - name: Perform TypeScript tests
+      - name: Perform TypeScript tests with default runtime
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.TypeScriptTest.*
+        if: ${{ inputs.runtime-ref == ''}}
+      - name: Perform TypeScript tests with alternative runtime
+        run: |
+          ./gradlew test --tests org.lflang.tests.runtime.TypeScriptTest.* -Druntime="git://github.com/lf-lang/reactor-ts.git#${{ inputs.runtime-ref }}"
+        if: ${{ inputs.runtime-ref }}
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
