--- a/.github/workflows/ts-tests.yml
+++ b/.github/workflows/ts-tests.yml
@@ -13,9 +13,7 @@ jobs:
       - name: Check out lingua-franca repository
         uses: actions/checkout@v3
         with:
-          repository: lf-lang/lingua-franca
-          submodules: true
-          fetch-dept: 0
+          fetch-depth: 0
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
       - name: Setup Node.js environment
