--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
   # Test the Gradle and Maven build.
   build:
-    uses: lf-lang/lingua-franca/.github/workflows/build.yml@refactor-cli
+    uses: lf-lang/lingua-franca/.github/workflows/build.yml@master
     needs: cancel
 
   # Run the unit tests.
@@ -32,7 +32,7 @@ jobs:
 
   # Run tests for the standalone compiler.
   cli-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@refactor-cli
+    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@master
     needs: cancel
 
   # Run the C benchmark tests.
