--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
         if: ${{ runner.os == 'Windows' }}
       - name: Install dependencies OS X
         run: |
