--- a/org.lflang/.classpath
+++ b/org.lflang/.classpath
@@ -7,6 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry excluding="org/lflang/cli/" kind="src" path="src"/>
+	<classpathentry excluding="org/lflang/cli/" kind="src" path="lingua-franca/org.lflang/src"/>
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
