--- a/org.lflang/build.properties
+++ b/org.lflang/build.properties
@@ -1,5 +1,6 @@
 source.. = src/,\
-           src-gen/
+           src-gen/,\
+           lingua-franca/org.lflang/src/
 bin.includes = model/generated/,\
                .,\
                META-INF/,\
@@ -19,3 +20,4 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.apache.commons.logging,\
                      org.apache.log4j,\
                      com.ibm.icu
+output.. = bin/
