--- a/.github/workflows/eclipse-tests.yml
+++ b/.github/workflows/eclipse-tests.yml
@@ -7,31 +7,25 @@ jobs:
   run:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out epoch repository
+        uses: actions/checkout@v3
         with:
-          submodules: true
+          submodules: recursive
           fetch-depth: 0
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
+      - name: Check Maven/Java configuration
+        run: mvn -version
+        shell: bash
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Install pnpm
         run: npm i -g pnpm
-      - name: Build lfc
-        run: |
-          ./gradlew buildLfc
-      - name: Add bin directory to PATH
+      - name: Run Eclipse tests
+        run: mvn -P test integration-test || mvn -U -P test integration-test
         shell: bash
-        run: |
-          cd bin
-          echo "$(pwd)" >> $GITHUB_PATH
-      - name: Test templates
-        shell: bash
-        run: |
-          cd org.lflang.ui/src/org/lflang/ui/wizard/templates
-          find .  -name *.lf -print0 | xargs -0 -n1 lfc
