Adapted plugin configuration to new structure of the LF core repo.

--- a/org.lflang/build.properties
+++ b/org.lflang/build.properties
@@ -1,14 +1,14 @@
 source.. = src/,\
            src-gen/,\
-           lingua-franca/org.lflang/src/
+           lingua-franca/core/src/main/java/,\
+           lingua-franca/core/src/main/resources/
 bin.includes = model/generated/,\
                .,\
                META-INF/,\
                plugin.xml,\
                about.html
 bin.excludes = **/*.mwe2,\
-               **/*.xtend \
-               src/lib
+               **/*.xtend
 additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.xtext.common.types,\
                      org.eclipse.xtext.xtext.generator,\
