--- a/org.lflang/.classpath
+++ b/org.lflang/.classpath
@@ -7,7 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry excluding="org/lflang/cli/" kind="src" path="src"/>
-	<classpathentry excluding="org/lflang/cli/" kind="src" path="lingua-franca/org.lflang/src"/>
+	<classpathentry kind="src" path="lingua-franca/core/src/main/resources"/>
+	<classpathentry kind="src" path="lingua-franca/core/src/main/java"/>
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
