Fixed Kotlin compilation with Maven

--- a/org.lflang/build.properties
+++ b/org.lflang/build.properties
@@ -1,6 +1,7 @@
 source.. = src/,\
            src-gen/,\
            lingua-franca/core/src/main/java/,\
+           lingua-franca/core/src/main/kotlin/,\
            lingua-franca/core/src/main/resources/
 bin.includes = model/generated/,\
                .,\
@@ -8,7 +9,8 @@ bin.includes = model/generated/,\
                plugin.xml,\
                about.html
 bin.excludes = **/*.mwe2,\
-               **/*.xtend
+               **/*.xtend,\
+               **/*.kt
 additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.xtext.common.types,\
                      org.eclipse.xtext.xtext.generator,\
