Fixed Kotlin source detection

--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -132,6 +132,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
+                                <sourceDir>${project.basedir}/src-gen</sourceDir>
                                 <sourceDir>${lf-java-sources}</sourceDir>
                                 <sourceDir>${lf-kotlin-sources}</sourceDir>
                             </sourceDirs>
