Configured 2 spaces as tab width in Epoch

--- a/org.lflang.product/plugin_customization.ini
+++ b/org.lflang.product/plugin_customization.ini
@@ -7,5 +7,6 @@ org.eclipse.ui/defaultPerspectiveId=org.lflang.product.perspective
 org.eclipse.ui.editors/lineNumberRuler = true
 # Spaces for tabs
 org.eclipse.ui.editors/spacesForTabs = true
+org.eclipse.ui.editors/tabWidth = 2
 # UTF-8 encoding as standard
 org.eclipse.core.resources/encoding = UTF-8
