--- a/org.lflang.product/pom.xml
+++ b/org.lflang.product/pom.xml
@@ -21,6 +21,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.5</version>
 				<executions>
 					<execution>
 						<id>gen-clean</id>
