--- a/org.lflang.ui/pom.xml
+++ b/org.lflang.ui/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -18,14 +18,15 @@
   <build>
     <plugins>
       <plugin>
-    	<groupId>org.apache.maven.plugins</groupId>
-    	<artifactId>maven-clean-plugin</artifactId>
-    	<executions>
-    	  <execution>
-    	    <id>gen-clean</id>
-    	    <phase>clean</phase>
-    	  </execution>
-    	</executions>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-clean-plugin</artifactId>
+      <version>2.5</version>
+      <executions>
+        <execution>
+          <id>gen-clean</id>
+          <phase>clean</phase>
+        </execution>
+      </executions>
       </plugin>
     </plugins>
   </build>
