--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -150,6 +150,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <filesets combine.children="append">
                         <fileset>
