--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -16,6 +16,8 @@
     <name>Lingua Franca Core</name>
 
     <properties>
+        <lf-antlr-sources>${project.basedir}/lingua-franca/core/src/main/antlr</lf-antlr-sources>
+        <lf-antlr-generated>${project.basedir}/lingua-franca/core/build/generated-src/antlr/main</lf-antlr-generated>
         <lf-java-sources>${project.basedir}/lingua-franca/core/src/main/java</lf-java-sources>
         <lf-kotlin-sources>${project.basedir}/lingua-franca/core/src/main/kotlin</lf-kotlin-sources>
     </properties>
@@ -45,6 +47,8 @@
                         <argument>rootPath=/${project.basedir}/..</argument>
                         <argument>-p</argument>
                         <argument>lfSource=${lf-java-sources}</argument>
+                        <argument>-p</argument>
+                        <argument>antlr4Gen=${lf-antlr-generated}</argument>
                     </arguments>
                     <classpathScope>compile</classpathScope>
                     <includePluginDependencies>true</includePluginDependencies>
@@ -86,7 +90,39 @@
                         <artifactId>xtext-antlr-generator</artifactId>
                         <version>[2.1.1, 3)</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.json</groupId>
+                        <artifactId>json</artifactId>
+                        <version>${jsonVersion}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.antlr</groupId>
+                        <artifactId>antlr4-runtime</artifactId>
+                        <version>${antlr4Version}</version>
+                    </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>${antlr4Version}</version>
+                <configuration>
+                    <arguments>
+                        <argument>-visitor</argument>
+                        <argument>-package</argument>
+                        <argument>org.lflang.dsl</argument>
+                    </arguments>
+                    <sourceDirectory>${lf-antlr-sources}</sourceDirectory>
+                    <outputDirectory>${lf-antlr-generated}</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!-- Cleanup files duplicated by Xtext. -->
             <!-- Currently we don't need to delete any generated files because
@@ -134,6 +170,7 @@
                             <sourceDirs>
                                 <sourceDir>${project.basedir}/src-gen</sourceDir>
                                 <sourceDir>${lf-java-sources}</sourceDir>
+                                <sourceDir>${lf-antlr-generated}</sourceDir>
                                 <sourceDir>${lf-kotlin-sources}</sourceDir>
                             </sourceDirs>
                         </configuration>
@@ -179,6 +216,12 @@
                         </fileset>
                         <fileset>
                             <directory>${basedir}/model/generated/</directory>
+                        </fileset>
+                        <fileset>
+                            <directory>${lf-antlr-generated}</directory>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
                         </fileset>
                     </filesets>
                 </configuration>
