--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,6 @@ on:
         required: false
         type: boolean
         default: false
-    secrets:
-      envPAT:
-        required: false
   workflow_dispatch:
 
 jobs:
@@ -22,7 +19,7 @@ jobs:
           submodules: recursive
           fetch-depth: 0
       - name: Prepare build environment
-        uses: ./.github/actions/prepare-build-env
+        uses: lf-lang/lingua-franca/.github/actions/prepare-build-env@master
       - name: Check Maven/Java configuration
         run: mvn -version
         shell: bash
@@ -32,7 +29,7 @@ jobs:
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          repo_token: "${{ secrets.envPAT }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: 'nightly'
           prerelease: true
           title: "Epoch Nightly"
